# expression_tomography

./: .gitignore  README.md  pyproject.toml
assets/runs/: README.md
assets/runs/metaphor_transfer_anthropic_live/: metaphor_transfer_report.md  metaphor_transfer_trials.csv  trials.sqlite
assets/runs/metaphor_transfer_openai_live/: metaphor_transfer_report.md  metaphor_transfer_trials.csv  trials.sqlite
assets/runs/rule_z_contract_binding_anthropic_seed29_30/: rule_z_case_level.csv  rule_z_ear_dependence.csv  rule_z_message_diagnostics.csv  rule_z_report.md  rule_z_sender_contrasts.csv  rule_z_summary.csv  rule_z_transmission_decomposition.csv  trials.sqlite
docs/: distinction_preservation_map_2026_06_30.md  expression_tomography_v0.md  live_rule_z_contract_binding_note_2026_07_02.md  live_rule_z_diagnostics_note_2026_06_28.md  live_rule_z_ear_redteam_note_2026_06_28.md  live_rule_z_equalized_ear_redteam_note_2026_06_30.md  live_rule_z_iterative_repair_note_2026_07_01.md  live_rule_z_note_2026_06_28.md  live_rule_z_sender_transmission_note_2026_06_30.md  rule_z_diagnostics.md
expression_tomography/: __init__.py
expression_tomography/config/: providers.anthropic.json  providers.example.json  providers.mock.json  providers.openai.json  providers.openai_gpt_5_5.json
expression_tomography/core/: __init__.py  providers.py  report.py  schema.py  store.py
expression_tomography/tasks/: __init__.py
tests/: test_expression_tomography_metaphor_transfer.py  test_expression_tomography_providers.py  test_expression_tomography_rule_z.py
(+57 files in other folders)
